{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 52,
  "lineage": "8c5bba20-ffc6-4fa8-78c6-a6c0e9f1a807",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033d525e98093305b",
            "arn": "arn:aws:ec2:ap-south-1:755917176506:elastic-ip/eipalloc-033d525e98093305b",
            "domain": "vpc",
            "id": "eipalloc-033d525e98093305b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-185-249.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.185.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-nat-eip",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-nat-eip",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:internet-gateway/igw-0e9c2fa39d6a1eb30",
            "id": "igw-0e9c2fa39d6a1eb30",
            "owner_id": "755917176506",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-igw",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-igw",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033d525e98093305b",
            "association_id": "eipassoc-03dc9b5dfda9285dd",
            "connectivity_type": "public",
            "id": "nat-04341c425f4e8893f",
            "network_interface_id": "eni-0ceb67877d555d74e",
            "private_ip": "10.0.1.113",
            "public_ip": "43.205.185.249",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09453e79d76114cf1",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-nat-gateway",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-nat-gateway",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc338168195241de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04341c425f4e8893f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc338168195241de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:route-table/rtb-0dc338168195241de",
            "id": "rtb-0dc338168195241de",
            "owner_id": "755917176506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-rt",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-rt",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:route-table/rtb-0e21efaf97001c243",
            "id": "rtb-0e21efaf97001c243",
            "owner_id": "755917176506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9c2fa39d6a1eb30",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-rt",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-rt",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0283c643e6ea8b553",
            "route_table_id": "rtb-0dc338168195241de",
            "subnet_id": "subnet-0831f572c2fd2b5cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c64369f653c57703",
            "route_table_id": "rtb-0dc338168195241de",
            "subnet_id": "subnet-0c4a03dfe7ce77686"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0017927e894c29109",
            "route_table_id": "rtb-0e21efaf97001c243",
            "subnet_id": "subnet-09453e79d76114cf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9f3a2b792076d9",
            "route_table_id": "rtb-0e21efaf97001c243",
            "subnet_id": "subnet-08fcec52b115ef675"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:security-group/sg-0518a4c647f316f75",
            "description": "Security Group for EKS Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0518a4c647f316f75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "flask-ecommerce-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "755917176506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-eks-cluster-sg",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-eks-cluster-sg",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:security-group/sg-0c5d44334a47ebb70",
            "description": "Security Group for Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5d44334a47ebb70",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node Communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "flask-ecommerce-dev-worker-node-sg",
            "name_prefix": "",
            "owner_id": "755917176506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-worker-node-sg",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-worker-node-sg",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:subnet/subnet-0831f572c2fd2b5cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831f572c2fd2b5cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755917176506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-subnet-1",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-subnet-1",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Private"
            },
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:subnet/subnet-0c4a03dfe7ce77686",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a03dfe7ce77686",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755917176506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-subnet-2",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-private-subnet-2",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Private"
            },
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:subnet/subnet-09453e79d76114cf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09453e79d76114cf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755917176506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-subnet-1",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-subnet-1",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Public"
            },
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:subnet/subnet-08fcec52b115ef675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fcec52b115ef675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755917176506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-subnet-2",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-public-subnet-2",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce",
              "Type": "Public"
            },
            "vpc_id": "vpc-0cec188146c2a62f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:755917176506:vpc/vpc-0cec188146c2a62f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0798c9bb34f5213b5",
            "default_route_table_id": "rtb-058d9ffecfb02139f",
            "default_security_group_id": "sg-0f302f20165300244",
            "dhcp_options_id": "dopt-092d57808d0d81f60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cec188146c2a62f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058d9ffecfb02139f",
            "owner_id": "755917176506",
            "tags": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-vpc",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "flask-ecommerce-dev-vpc",
              "Owner": "Vishwas",
              "Project": "Flask-Ecommerce"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}